[gd_scene load_steps=2 format=3 uid="uid://ccc7fuj4v6mge"]

[ext_resource type="Script" uid="uid://uxmcvf5v0spv" path="res://scenes/components/weapon_component.gd" id="1_ffgt2"]

[node name="WeaponComponent" type="Node2D"]
script = ExtResource("1_ffgt2")

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[node name="ShootCooldownTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
[connection signal="timeout" from="ShootCooldownTimer" to="." method="_on_shoot_cooldown_timer_timeout"]
